Fix issue where checkmark is not paired with icon the gap was not correct

--- a/packages/structures/src/DropdownMenu.css
+++ b/packages/structures/src/DropdownMenu.css
@@ -57,6 +57,10 @@
 	@layer base {
 		visibility: var(--🥝DropdownMenuCheckmark-visibility);
 		--🥝Icon-color: var(--stratakit-color-icon-neutral-primary);
+
+		&:where(.🥝ListItemDecoration) {
+			margin-inline-end: var(--stratakit-space-x2);
+		}
 	}
 }
 
